<resources>
    <string name="app_name">colculator</string>
    <string name="_0">0</string>
    <string name="njuh">0</string>
    <string name="c">C</string>
    <string name="ip">()</string>
    <string name="i">X</string>
    <string name="ik">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="sad">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="edq">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="wdq">+</string>
    <string name="qwe">.</string>
    <string name="ddd">0</string>
    <string name="wdeeee">=</string>
</resources>